Increase link spacing. Fix links in spontaneous content.

--- a/sass/partials/_core.scss
+++ b/sass/partials/_core.scss
@@ -76,6 +76,6 @@ p:last-child {
 ul {
   margin-left: $spacing * 1.5;
   li {
-    margin-bottom: 2px;
+    margin-bottom: 3px;
   }
 }
